--- a/plugins/copyId/manifest.json
+++ b/plugins/copyId/manifest.json
@@ -1,7 +1,12 @@
 {
     "name": "AdditionalButtons",
     "description": "Additional Buttons",
-    "authors": [],
+    "authors": [
+        {
+            "name": "Angelix",
+            "id": "692632336961110087"
+        }
+    ],
     "main": "index.js",
     "vendetta": {
         "icon": "ic_chat_bubble_16px"
