--- a/plugins/copyId/manifest.json
+++ b/plugins/copyId/manifest.json
@@ -7,7 +7,7 @@
             "id": "692632336961110087"
         }
     ],
-    "main": "index.js",
+    "main": "src/index.js",
     "vendetta": {
         "icon": "ic_chat_bubble_16px"
     }
