--- a/plugins/uwuify/manifest.json
+++ b/plugins/uwuify/manifest.json
@@ -11,7 +11,7 @@
           "id": "744276454946242723" 
         }
     ],
-    "main": "index.ts",
+    "main": "src/index.ts",
     "vendetta": {
         "icon": "ic_application_command_24px"
     }
